tests/k8s_testcases/example_policies/demo_short/demo1-topology-resourcelist-scheme.yaml
resourceList:
  - ../../example_podlist/ns_list.json
  - ../../example_podlist/pods_list.json

networkConfigList:
  - name: sanity_np1
    networkPolicyList:
      - sanity1-networkpolicy.yaml
    expectedWarnings: 3

queries:
  - name: sanity_np1
    sanity:
      - sanity_np1
    expected: 1
