tests/k8s_testcases/example_policies/demo_short/demo2-pods-resourcelist-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
resourceList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: sanity_np2
    networkPolicyList:
      - sanity2-networkpolicy.yaml
    expectedWarnings: 0

queries:
  - name: sanity_np2
    sanity:
      - sanity_np2
    expected: 1
