tests/k8s_testcases/example_policies/demo_short/demo2-scheme.yaml
networkConfigList:
  - name: sanity_np2
    namespaceList: ../../example_podlist/ns_list.json
    podList: ../../example_podlist/pods_list.json
    networkPolicyList:
      - sanity2-networkpolicy.yaml
    expectedWarnings: 0

queries:
  - name: sanity_np2
    sanity:
      - sanity_np2
    expected: 1
