tests/k8s_testcases/example_policies/demo_short/demo3-ns-resourcelist-scheme.yaml
resourceList: ../../example_podlist/ns_list.json # not recommended pattern (combines resourceList with podList)
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: interfere_np
    networkPolicyList:
      - interferes-networkpolicy.yaml
    expectedWarnings: 0

queries:
  - name: interference
    interferes:
      - interfere_np/kube-system/enable-from-default-to-isolated-by-app
      - interfere_np/kube-system/enable-from-vendor-system-to-isolated-by-tier
    expected: 1
